Add backend Views functionality for region grouping
