# backend/src/routes/index.js
@@ -1,9 +1,11 @@
 const express = require('express');
 
 const regionRoutes = require('./regionRoutes');
+const viewRoutes = require('./viewRoutes');
 
 const router = express.Router();
 
 router.use('/api/regions', regionRoutes);
+router.use('/api/views', viewRoutes);
 
 module.exports = router;
